--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,6 @@
 :root {
   /* Colors */
-  --color-primary: #1a1a1a;
+  --color-primary: #131E30;
   --color-secondary: #2d4a5a;
   --color-accent: #8fbc8f;
   --color-light: #f5f5f5;
